--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon Oct 30 2023 21:03:44 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Oct 30 2023 22:04:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -44,25 +44,25 @@
   </div>
   <section class="hero">
     <div class="div-block-9">
-      <h3 class="hero-heading-one">Understand, Create &amp; Deliver Design Solutions.</h3>
-      <p class="subtitle hero-area">UX/UI Designer with a focus in visual design and front end development</p>
+      <h3 class="hero-heading-one">Understand, Create &amp; Deliver Design Solutions</h3>
+      <p class="subtitle hero-area">Hello World! I&#x27;m a UX/UI Designer with a focus in visual design and front end development</p>
     </div>
-    <div data-w-id="d14f05d4-66a4-7555-03d0-9322b428b8c0" class="div-block-8"><img src="images/Understand.png" loading="lazy" data-w-id="199f65ba-391d-84dc-d5cd-1ae00ca0705f" sizes="(max-width: 479px) 140px, (max-width: 767px) 100px, (max-width: 991px) 130px, 250px" alt="" srcset="images/Understand-p-500.png 500w, images/Understand-p-800.png 800w, images/Understand-p-1080.png 1080w, images/Understand.png 1600w" class="image-5"><img src="images/Create.png" loading="lazy" data-w-id="3bde1fc1-6c43-57e4-6d88-b11ab05f0d41" sizes="(max-width: 479px) 200px, (max-width: 767px) 160px, (max-width: 991px) 190px, 320px" alt="" srcset="images/Create-p-500.png 500w, images/Create-p-800.png 800w, images/Create-p-1080.png 1080w, images/Create-p-1600.png 1600w, images/Create.png 1601w" class="image-6"><img src="images/Deliver.png" loading="lazy" data-w-id="32f6c609-e23f-8914-b358-e389c05e88a4" sizes="(max-width: 767px) 200px, (max-width: 991px) 240px, 36vw" alt="" srcset="images/Deliver-p-500.png 500w, images/Deliver-p-800.png 800w, images/Deliver-p-1080.png 1080w, images/Deliver-p-1600.png 1600w, images/Deliver.png 1601w" class="image-7"></div>
+    <div data-w-id="d14f05d4-66a4-7555-03d0-9322b428b8c0" class="div-block-8"><img src="images/Understand.png" loading="lazy" data-w-id="199f65ba-391d-84dc-d5cd-1ae00ca0705f" sizes="(max-width: 479px) 140px, (max-width: 767px) 100px, (max-width: 991px) 130px, 250px" alt="" srcset="images/Understand-p-500.png 500w, images/Understand-p-800.png 800w, images/Understand-p-1080.png 1080w, images/Understand.png 1600w" class="image-5"><img src="images/Create.png" loading="lazy" data-w-id="3bde1fc1-6c43-57e4-6d88-b11ab05f0d41" sizes="(max-width: 479px) 200px, (max-width: 767px) 160px, (max-width: 991px) 190px, 320px" alt="" srcset="images/Create-p-500.png 500w, images/Create-p-800.png 800w, images/Create-p-1080.png 1080w, images/Create-p-1600.png 1600w, images/Create.png 1601w" class="image-6"><img src="images/Deliver.png" loading="lazy" data-w-id="32f6c609-e23f-8914-b358-e389c05e88a4" sizes="(max-width: 767px) 200px, (max-width: 991px) 230px, 36vw" alt="" srcset="images/Deliver-p-500.png 500w, images/Deliver-p-800.png 800w, images/Deliver-p-1080.png 1080w, images/Deliver-p-1600.png 1600w, images/Deliver.png 1601w" class="image-7"></div>
   </section>
   <div id="aboutv" class="intro-section">
     <div class="intro-div">
       <div class="about-div">
-        <p class="subtitle hide-hero-text">UX/UI Designer with a focus in visual design and front end development</p>
-        <p class="intro-paragraph">Hello World! I&#x27;m Vanessa Salinas. I have over 15 years of combined experience in graphic design, web design and front end development. I strive to strengthen user experiences through my skills in UX research, collaboration, problem solving, wire framing and UI prototyping. I have a great interest in accepting feedback and using it to build better experiences for users.</p>
+        <p class="subtitle hide-hero-text">Hello World! I&#x27;m a UX/UI Designer with a focus in visual design and front end development</p>
+        <p class="intro-paragraph">I have over 15 years of combined experience in graphic design, web design and front end development. I strive to strengthen user experiences through my skills in UX research, collaboration, problem solving, wire framing and UI prototyping. I have a great interest in accepting feedback and using it to build better experiences for users.</p>
       </div>
       <div class="icon-div">
         <div class="w-layout-grid grid">
           <div id="w-node-_7331fe8b-6002-ea69-4a57-dd1d744880e1-0a720657" class="icon-card">
             <div class="icon-card-content-parent w-clearfix">
-              <div class="icon-image"><img src="images/Design-Icon.svg" loading="lazy" alt="" class="image"></div>
+              <div class="icon-image"><img src="images/research-discovery-icon.png" loading="lazy" alt="" class="image"></div>
               <div class="icon-card-content">
-                <p class="icon-title">Research &amp; Design</p>
-                <p class="icon-description">Adobe Illustrator, Photoshop, InDesign and more</p>
+                <p class="icon-title">Research &amp; Discovery</p>
+                <p class="icon-description">Competitive Analysis, Content Inventory, Project Requirements and more</p>
               </div>
             </div>
           </div>
@@ -70,8 +70,8 @@
             <div class="icon-card-content-parent w-clearfix">
               <div class="icon-image"><img src="images/Prototyping-Icon.svg" loading="lazy" alt="" class="image"></div>
               <div class="icon-card-content">
-                <p class="icon-title">Prototyping</p>
-                <p class="icon-description">Sketch, Adobe XD, InVision, Framer and more</p>
+                <p class="icon-title">Design &amp; Prototyping</p>
+                <p class="icon-description">Adobe XD, Illustrator, Photoshop, InDesign, InVision, Framer and more</p>
               </div>
             </div>
           </div>
@@ -79,8 +79,8 @@
             <div class="icon-card-content-parent w-clearfix">
               <div class="icon-image"><img src="images/Code-Icon.svg" loading="lazy" alt="" class="image"></div>
               <div class="icon-card-content">
-                <p class="icon-title">Web Development</p>
-                <p class="icon-description">HTML/CSS/JS, WordPress, SharePoint and more</p>
+                <p class="icon-title">Web Development &amp; Delivery</p>
+                <p class="icon-description">HTML/CSS/JS, WordPress, Webflow, SharePoint and more</p>
               </div>
             </div>
           </div>
