--- a/work/trilan-solutions-business-card-design.html
+++ b/work/trilan-solutions-business-card-design.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Jul 25 2023 14:11:20 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Nov 25 2023 06:11:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a731a959c81d0eb445fae" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -36,7 +36,7 @@
       </div>
     </div>
   </div>
-  <div class="portfolio-section wf-section">
+  <div class="portfolio-section">
     <div class="content-div">
       <div class="project-header">
         <h6>Trilan Solutions</h6>
@@ -45,11 +45,11 @@
       </div>
       <div class="resources-div"><img src="../images/2-p-1024x768.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/2-p-1024x768-p-500.jpeg 500w, ../images/2-p-1024x768.jpg 1024w" alt="" class="image-2"></div>
     </div>
-    <a href="javascript:history.back();" class="backlink w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
+    <a href="javascript:history.back();" class="backlink w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" alt="Left Arrow Icon" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px">
       <div class="text-block">Back</div>
     </a>
   </div>
-  <div id="Footer" class="footer wf-section">
+  <div id="Footer" class="footer">
     <div class="footer-div">
       <p class="copyright">© Copyright 2023 Vanessa Salinas - All Rights Reserved</p>
       <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="../images/up-arrow-white.png" loading="lazy" sizes="40px" srcset="../images/up-arrow-white-p-500.png 500w, ../images/up-arrow-white.png 512w" alt=""></a>
