--- a/work/dallas-ideas-website-design.html
+++ b/work/dallas-ideas-website-design.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Jul 25 2023 14:11:20 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Nov 25 2023 06:11:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6202c045bf204cd765325a27" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -36,7 +36,7 @@
       </div>
     </div>
   </div>
-  <div class="portfolio-section wf-section">
+  <div class="portfolio-section">
     <div class="content-div">
       <div class="project-header">
         <h6>Dallas Ideas</h6>
@@ -49,11 +49,11 @@
         <h5>Final UI Mockups</h5><img src="../images/Screen-Shot-2022-02-08-at-1.35.10-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, (max-width: 3411px) 84vw, 2866px" srcset="../images/Screen-Shot-2022-02-08-at-1.35.10-PM-p-800.png 800w, ../images/Screen-Shot-2022-02-08-at-1.35.10-PM-p-1080.png 1080w, ../images/Screen-Shot-2022-02-08-at-1.35.10-PM-p-1600.png 1600w, ../images/Screen-Shot-2022-02-08-at-1.35.10-PM-p-2000.png 2000w, ../images/Screen-Shot-2022-02-08-at-1.35.10-PM-p-2600.png 2600w, ../images/Screen-Shot-2022-02-08-at-1.35.10-PM.png 2866w" alt=""><img src="../images/Screen-Shot-2022-02-08-at-1.35.33-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, (max-width: 3411px) 84vw, 2866px" srcset="../images/Screen-Shot-2022-02-08-at-1.35.33-PM-p-500.png 500w, ../images/Screen-Shot-2022-02-08-at-1.35.33-PM-p-800.png 800w, ../images/Screen-Shot-2022-02-08-at-1.35.33-PM-p-1080.png 1080w, ../images/Screen-Shot-2022-02-08-at-1.35.33-PM-p-1600.png 1600w, ../images/Screen-Shot-2022-02-08-at-1.35.33-PM-p-2000.png 2000w, ../images/Screen-Shot-2022-02-08-at-1.35.33-PM-p-2600.png 2600w, ../images/Screen-Shot-2022-02-08-at-1.35.33-PM.png 2866w" alt=""><img src="../images/Screen-Shot-2022-02-08-at-1.35.44-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, (max-width: 3411px) 84vw, 2866px" srcset="../images/Screen-Shot-2022-02-08-at-1.35.44-PM-p-800.png 800w, ../images/Screen-Shot-2022-02-08-at-1.35.44-PM-p-1080.png 1080w, ../images/Screen-Shot-2022-02-08-at-1.35.44-PM-p-1600.png 1600w, ../images/Screen-Shot-2022-02-08-at-1.35.44-PM-p-2000.png 2000w, ../images/Screen-Shot-2022-02-08-at-1.35.44-PM-p-2600.png 2600w, ../images/Screen-Shot-2022-02-08-at-1.35.44-PM.png 2866w" alt=""><img src="../images/Screen-Shot-2022-02-08-at-1.35.54-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, (max-width: 3411px) 84vw, 2866px" srcset="../images/Screen-Shot-2022-02-08-at-1.35.54-PM-p-500.png 500w, ../images/Screen-Shot-2022-02-08-at-1.35.54-PM-p-800.png 800w, ../images/Screen-Shot-2022-02-08-at-1.35.54-PM-p-1080.png 1080w, ../images/Screen-Shot-2022-02-08-at-1.35.54-PM-p-1600.png 1600w, ../images/Screen-Shot-2022-02-08-at-1.35.54-PM-p-2000.png 2000w, ../images/Screen-Shot-2022-02-08-at-1.35.54-PM-p-2600.png 2600w, ../images/Screen-Shot-2022-02-08-at-1.35.54-PM.png 2866w" alt=""><img src="../images/Screen-Shot-2022-02-08-at-2.08.06-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, (max-width: 3485px) 84vw, 2928px" srcset="../images/Screen-Shot-2022-02-08-at-2.08.06-PM-p-500.png 500w, ../images/Screen-Shot-2022-02-08-at-2.08.06-PM-p-800.png 800w, ../images/Screen-Shot-2022-02-08-at-2.08.06-PM-p-1080.png 1080w, ../images/Screen-Shot-2022-02-08-at-2.08.06-PM-p-1600.png 1600w, ../images/Screen-Shot-2022-02-08-at-2.08.06-PM-p-2000.png 2000w, ../images/Screen-Shot-2022-02-08-at-2.08.06-PM-p-2600.png 2600w, ../images/Screen-Shot-2022-02-08-at-2.08.06-PM.png 2928w" alt="">
       </div>
     </div>
-    <a href="javascript:history.back();" class="backlink w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
+    <a href="javascript:history.back();" class="backlink w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" alt="Left Arrow Icon" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px">
       <div class="text-block">Back</div>
     </a>
   </div>
-  <div id="Footer" class="footer wf-section">
+  <div id="Footer" class="footer">
     <div class="footer-div">
       <p class="copyright">© Copyright 2023 Vanessa Salinas - All Rights Reserved</p>
       <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="../images/up-arrow-white.png" loading="lazy" sizes="40px" srcset="../images/up-arrow-white-p-500.png 500w, ../images/up-arrow-white.png 512w" alt=""></a>
