--- a/work/resilient-dallas-website-design.html
+++ b/work/resilient-dallas-website-design.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Jul 25 2023 14:11:20 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Nov 25 2023 06:11:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a6233296cc1cbf9e25fc8" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -36,7 +36,7 @@
       </div>
     </div>
   </div>
-  <div class="portfolio-section wf-section">
+  <div class="portfolio-section">
     <div class="content-div">
       <div class="project-header">
         <h6>Resilient Dallas</h6>
@@ -45,11 +45,11 @@
       </div>
       <div class="resources-div"><img src="../images/Screen-Shot-2021-09-21-at-5.56.28-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-2600.png 2600w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-3200.png 3200w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM.png 3324w" alt="A preview of how to read the document provided from the client" class="image-2"><img src="../images/Screen-Shot-2021-09-21-at-5.56.55-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-2600.png 2600w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM.png 3324w" alt="A preview of the first goal initiatives, actions and resources" class="image-2"><img src="../images/Resilient-Dallas-Wireframses-and-Initial-Mockups.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/Resilient-Dallas-Wireframses-and-Initial-Mockups-p-500.png 500w, ../images/Resilient-Dallas-Wireframses-and-Initial-Mockups-p-800.png 800w, ../images/Resilient-Dallas-Wireframses-and-Initial-Mockups-p-1080.png 1080w, ../images/Resilient-Dallas-Wireframses-and-Initial-Mockups-p-1600.png 1600w, ../images/Resilient-Dallas-Wireframses-and-Initial-Mockups-p-2000.png 2000w, ../images/Resilient-Dallas-Wireframses-and-Initial-Mockups.png 2686w" alt="A preview of the first goal initiatives, actions and resources" class="image-2"><img src="../images/Homepage---Desktop.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/Homepage---Desktop-p-500.jpeg 500w, ../images/Homepage---Desktop-p-800.jpeg 800w, ../images/Homepage---Desktop-p-1080.jpeg 1080w, ../images/Homepage---Desktop.jpg 1440w" alt="A mockup of the final landing page" class="image-2"><img src="../images/Initiative-and-Action-Template---Desktop.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 81vw, (max-width: 991px) 79vw, 88vw" srcset="../images/Initiative-and-Action-Template---Desktop-p-500.jpeg 500w, ../images/Initiative-and-Action-Template---Desktop-p-800.jpeg 800w, ../images/Initiative-and-Action-Template---Desktop-p-1080.jpeg 1080w, ../images/Initiative-and-Action-Template---Desktop.jpg 1440w" alt="A mockup of the goals details template that includes all of its initiatives, actions and resources" class="image-2"></div>
     </div>
-    <a href="javascript:history.back();" class="backlink w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
+    <a href="javascript:history.back();" class="backlink w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" alt="Left Arrow Icon" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px">
       <div class="text-block">Back</div>
     </a>
   </div>
-  <div id="Footer" class="footer wf-section">
+  <div id="Footer" class="footer">
     <div class="footer-div">
       <p class="copyright">© Copyright 2023 Vanessa Salinas - All Rights Reserved</p>
       <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="../images/up-arrow-white.png" loading="lazy" sizes="40px" srcset="../images/up-arrow-white-p-500.png 500w, ../images/up-arrow-white.png 512w" alt=""></a>
