--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sat Nov 25 2023 06:11:50 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Dec 05 2023 23:17:41 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -136,6 +136,26 @@
           <div class="div-block-5">
             <h4 class="work-heading">Design Audit</h4>
             <p class="paragraph-2">City of Dallas Human Resources</p>
+          </div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 3vw, (max-width: 991px) 4vw, 33px" alt=""></div>
+        </div>
+      </a>
+      <a href="work/cod-logo-concepts.html" class="work-link-block worklinkblock2col w-inline-block">
+        <div class="work1 workcodlogo"></div>
+        <div class="div-block-7">
+          <div class="div-block-5">
+            <h4 class="work-heading">Logo Design</h4>
+            <p class="paragraph-2">Concepts for Dallas.gov&#x27;s Future Website</p>
+          </div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 3vw, (max-width: 991px) 4vw, 33px" alt=""></div>
+        </div>
+      </a>
+      <a href="work/housing-redesign-website.html" class="work-link-block w-inline-block">
+        <div class="work1 workhou"></div>
+        <div class="div-block-7">
+          <div class="div-block-5">
+            <h4 class="work-heading">UI Design</h4>
+            <p class="paragraph-2">Housing and Neighborhood Revitalization</p>
           </div>
           <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 3vw, (max-width: 991px) 4vw, 33px" alt=""></div>
         </div>
