--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Dec 06 2023 23:40:45 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Dec 07 2023 22:58:33 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -44,10 +44,10 @@
   </div>
   <section class="hero">
     <div class="div-block-9">
-      <h3 class="hero-heading-one">Understand, Create &amp; Deliver Design Solutions</h3>
+      <h3 class="hero-heading-one">Understand, Create and Deliver Design Solutions</h3>
       <p class="subtitle hero-area">Hello World! I&#x27;m a UX/UI Designer with a focus in visual design and front end development</p>
     </div>
-    <div data-w-id="d14f05d4-66a4-7555-03d0-9322b428b8c0" class="div-block-8"><img src="images/Understand.png" loading="lazy" data-w-id="199f65ba-391d-84dc-d5cd-1ae00ca0705f" sizes="(max-width: 479px) 140px, (max-width: 767px) 100px, (max-width: 991px) 130px, 250px" alt="" srcset="images/Understand-p-500.png 500w, images/Understand-p-800.png 800w, images/Understand-p-1080.png 1080w, images/Understand.png 1600w" class="image-5"><img src="images/Create.png" loading="lazy" data-w-id="3bde1fc1-6c43-57e4-6d88-b11ab05f0d41" sizes="(max-width: 479px) 200px, (max-width: 767px) 160px, (max-width: 991px) 190px, 320px" alt="" srcset="images/Create-p-500.png 500w, images/Create-p-800.png 800w, images/Create-p-1080.png 1080w, images/Create-p-1600.png 1600w, images/Create.png 1601w" class="image-6"><img src="images/Deliver.png" loading="lazy" data-w-id="32f6c609-e23f-8914-b358-e389c05e88a4" sizes="(max-width: 991px) 100vw, 36vw" alt="" srcset="images/Deliver-p-500.png 500w, images/Deliver-p-800.png 800w, images/Deliver-p-1080.png 1080w, images/Deliver-p-1600.png 1600w, images/Deliver.png 1601w" class="image-7"></div>
+    <div class="div-block-8"><img src="images/Portfolio-Animation.gif" loading="lazy" alt="" class="image-8"></div>
   </section>
   <div id="aboutv" class="intro-section">
     <div class="intro-div">
