--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Dec 08 2023 19:01:32 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jan 31 2024 23:34:49 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -42,24 +42,21 @@
       </div>
     </div>
   </div>
-  <section class="hero">
-    <div class="div-block-9">
-      <h3 class="hero-heading-one">Understand, Create and Deliver Design Solutions</h3>
-      <p class="subtitle hero-area">Hello World! I&#x27;m a UX/UI Designer with a focus in visual design and front end development</p>
-    </div>
-    <div class="div-block-8"><img src="images/Portfolio-Animation.gif" loading="lazy" alt="" class="image-8"></div>
-  </section>
   <div id="aboutv" class="intro-section">
     <div class="intro-div">
       <div class="about-div">
-        <p class="subtitle hide-hero-text">Hello World! I&#x27;m a UX/UI Designer with a focus in visual design and front end development</p>
-        <p class="intro-paragraph">I have over 15 years of combined experience in graphic design, web design and front end development. I strive to strengthen user experiences through my skills in UX research, collaboration, problem solving, wire framing and UI prototyping. I have a great interest in accepting feedback and using it to build better experiences for users.</p>
+        <h3 class="hero-heading-one">Understand, Create and Deliver</h3>
+        <h3 class="hero-heading-one-linetwo">Design Solutions</h3>
+        <p class="subtitle hero-area">Hello World! I&#x27;m a UX/UI Designer with a focus in visual design and front end development</p>
+        <p class="intro-paragraph">Over 15 years of combined experience in graphic design, web design and front end development. Goal is to improve UI/UX through various methods e.g. research, collaboration, problem solving, wire framing, prototyping and more. Great interest in accepting feedback and using it to build better experiences for users.</p>
       </div>
       <div class="icon-div">
         <div class="w-layout-grid grid">
           <div id="w-node-_7331fe8b-6002-ea69-4a57-dd1d744880e1-0a720657" class="icon-card">
-            <div class="icon-card-content-parent w-clearfix">
-              <div class="icon-image"><img src="images/research-discovery-icon.png" loading="lazy" alt="" class="image"></div>
+            <div class="icon-card-content-parent">
+              <div class="w-clearfix">
+                <div class="icon-image"><img src="images/research-discovery-icon-orange.png" loading="lazy" alt="" class="image"></div>
+              </div>
               <div class="icon-card-content">
                 <p class="icon-title">Research &amp; Discovery</p>
                 <p class="icon-description">Competitive Analysis, Content Inventory, Project Requirements and more</p>
@@ -67,8 +64,10 @@
             </div>
           </div>
           <div id="w-node-d1906c74-a7e0-552d-1b95-75c2e573ba0b-0a720657" class="icon-card">
-            <div class="icon-card-content-parent w-clearfix">
-              <div class="icon-image"><img src="images/Prototyping-Icon.svg" loading="lazy" alt="" class="image"></div>
+            <div class="icon-card-content-parent">
+              <div class="w-clearfix">
+                <div class="icon-image"><img src="images/Prototyping-Icon-Orange.svg" loading="lazy" alt="" class="image"></div>
+              </div>
               <div class="icon-card-content">
                 <p class="icon-title">Design &amp; Prototyping</p>
                 <p class="icon-description">Adobe XD, Illustrator, Photoshop, InDesign, InVision, Framer and more</p>
@@ -76,8 +75,10 @@
             </div>
           </div>
           <div id="w-node-_6ebfa1ea-b3e4-df76-0df8-2c2ca6080ae8-0a720657" class="icon-card">
-            <div class="icon-card-content-parent w-clearfix">
-              <div class="icon-image"><img src="images/Code-Icon.svg" loading="lazy" alt="" class="image"></div>
+            <div class="icon-card-content-parent">
+              <div class="w-clearfix">
+                <div class="icon-image"><img src="images/Code-Icon-Orange.svg" loading="lazy" alt="" class="image"></div>
+              </div>
               <div class="icon-card-content">
                 <p class="icon-title">Web Development &amp; Delivery</p>
                 <p class="icon-description">HTML/CSS/JS, WordPress, Webflow, SharePoint and more</p>
