--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Feb 29 2024 17:17:28 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Feb 29 2024 17:24:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -46,19 +46,19 @@
       <div id="w-node-b9156bb7-f7ea-b630-6ad6-a6985f1d3c94-0a720657" class="w-layout-cell">
         <p class="hero-text">Understand</p>
       </div>
-      <div id="w-node-b9156bb7-f7ea-b630-6ad6-a6985f1d3c95-0a720657" class="w-layout-cell cell-2">
+      <div id="w-node-b9156bb7-f7ea-b630-6ad6-a6985f1d3c95-0a720657" class="w-layout-cell cell-3">
         <p class="hero-text">Create</p>
+      </div>
+      <div id="w-node-dcbf95eb-3a97-d9db-142e-10cac3cc1046-0a720657" class="w-layout-cell">
+        <p class="hero-text">Design</p>
       </div>
       <div id="w-node-b68808fc-2105-084c-dfaf-50cb34659efb-0a720657" class="w-layout-cell cell-3">
         <p class="hero-text">Deliver</p>
       </div>
-      <div id="w-node-d720cf02-8dc4-7b6a-49c6-d1e164731c0a-0a720657" class="w-layout-cell cell-2">
-        <p class="hero-text">Design</p>
-      </div>
-      <div id="w-node-_43fbd405-6465-13b2-5676-94ab31361c82-0a720657" class="w-layout-cell">
+      <div id="w-node-d720cf02-8dc4-7b6a-49c6-d1e164731c0a-0a720657" class="w-layout-cell">
         <p class="hero-text">Solutions</p>
       </div>
-      <div id="w-node-_6f1d8b0f-8a52-edbc-0614-a3020ff90bed-0a720657" class="w-layout-cell cell-2">
+      <div id="w-node-_67953164-5bbb-8a19-b595-37dbafa2f199-0a720657" class="w-layout-cell">
         <p class="hero-text-placeholder">.</p>
       </div>
     </div>
@@ -239,7 +239,7 @@
             <h4 class="work-heading">Logo, UI Design &amp; Development</h4>
             <p class="paragraph-2">Approved to Print</p>
           </div>
-          <div class="div-block-6"><img src="images/resize-dark.png" loading="lazy" srcset="images/resize-dark-p-500.png 500w, images/resize-dark.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 991px) 4vw, 33px" alt=""></div>
+          <div class="div-block-6"><img src="images/resize-dark.png" loading="lazy" srcset="images/resize-dark-p-500.png 500w, images/resize-dark.png 512w" sizes="100vw" alt=""></div>
         </div>
       </a>
       <a href="work/jason-carlson-ascension-website-design.html" class="work-link-block w-inline-block">
@@ -400,7 +400,7 @@
   <div id="Footer" class="footer">
     <div class="footer-div">
       <p class="copyright">© Copyright 2024 Vanessa Salinas - All Rights Reserved</p>
-      <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="images/up-arrow-white.png" loading="lazy" sizes="40px" srcset="images/up-arrow-white-p-500.png 500w, images/up-arrow-white.png 512w" alt=""></a>
+      <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="images/up-arrow-white.png" loading="lazy" sizes="100vw" srcset="images/up-arrow-white-p-500.png 500w, images/up-arrow-white.png 512w" alt=""></a>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=606def14871f33b3fe720655" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
