--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Feb 29 2024 19:49:56 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Feb 29 2024 20:12:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -221,7 +221,7 @@
             <h4 class="work-heading">Logo, UI Design &amp; Development</h4>
             <p class="paragraph-2">Approved to Print</p>
           </div>
-          <div class="div-block-6"><img src="images/resize-dark.png" loading="lazy" srcset="images/resize-dark-p-500.png 500w, images/resize-dark.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/resize-dark.png" loading="lazy" srcset="images/resize-dark-p-500.png 500w, images/resize-dark.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 991px) 4vw, 33px" alt=""></div>
         </div>
       </a>
       <a href="work/jason-carlson-ascension-website-design.html" class="work-link-block w-inline-block">
@@ -369,9 +369,9 @@
   <div id="contactv" class="intro-section contact-section">
     <div class="intro-div">
       <div class="about-div">
-        <h3 class="heading-four-contact">Get in Touch</h3>
-        <p class="paragraph-contact">I&#x27;m currently continuing my education by learning and practicing web accessibility standards in design and front-end development. Also staying up-to-date on the latest trends and techniques in web and design.<br></p>
-        <a href="http://www.linkedin.com/in/vanessasalinas" target="_blank" class="link-block-contact w-inline-block"><img src="images/linkedin-icon-white.svg" loading="lazy" width="24" alt="LinkedIn Icon" class="image-3">
+        <h3 class="hero-text contact-title">Get in Touch</h3>
+        <p class="paragraph-contact">Always learning and practicing web accessibility standards in design and front-end development. Staying up-to-date on trends and techniques in web and design.<br></p>
+        <a href="http://www.linkedin.com/in/vanessasalinas" target="_blank" class="link-block-contact w-inline-block"><img src="images/linkedin-icon-bright-blue.png" loading="lazy" sizes="(max-width: 479px) 34px, (max-width: 767px) 40px, 48px" srcset="images/linkedin-icon-bright-blue.png 500w, images/linkedin-icon-bright-blue.png 800w, images/linkedin-icon-bright-blue.png 950w" alt="LinkedIn Icon" class="image-3">
           <div class="div-block-2-contact">
             <p class="link-block-text-contact">Connect with me on LinkedIn</p>
           </div>
@@ -382,7 +382,7 @@
   <div id="Footer" class="footer">
     <div class="footer-div">
       <p class="copyright">© Copyright 2024 Vanessa Salinas - All Rights Reserved</p>
-      <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="images/up-arrow-white.png" loading="lazy" sizes="100vw" srcset="images/up-arrow-white-p-500.png 500w, images/up-arrow-white.png 512w" alt=""></a>
+      <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="images/up-arrow-white.png" loading="lazy" sizes="40px" srcset="images/up-arrow-white-p-500.png 500w, images/up-arrow-white.png 512w" alt=""></a>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=606def14871f33b3fe720655" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
