--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Feb 29 2024 20:12:55 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Feb 29 2024 22:05:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -81,6 +81,7 @@
         </div>
       </div>
     </div>
+    <div class="animate-bg"></div>
   </div>
   <div id="vwork" class="print-work-section">
     <div class="work-div">
@@ -371,7 +372,7 @@
       <div class="about-div">
         <h3 class="hero-text contact-title">Get in Touch</h3>
         <p class="paragraph-contact">Always learning and practicing web accessibility standards in design and front-end development. Staying up-to-date on trends and techniques in web and design.<br></p>
-        <a href="http://www.linkedin.com/in/vanessasalinas" target="_blank" class="link-block-contact w-inline-block"><img src="images/linkedin-icon-bright-blue.png" loading="lazy" sizes="(max-width: 479px) 34px, (max-width: 767px) 40px, 48px" srcset="images/linkedin-icon-bright-blue.png 500w, images/linkedin-icon-bright-blue.png 800w, images/linkedin-icon-bright-blue.png 950w" alt="LinkedIn Icon" class="image-3">
+        <a href="http://www.linkedin.com/in/vanessasalinas" target="_blank" class="link-block-contact w-inline-block"><img src="images/linkedin-icon-bright-blue.png" loading="lazy" sizes="(max-width: 479px) 34px, (max-width: 767px) 40px, 48px" srcset="images/linkedin-icon-bright-blue-p-500.png 500w, images/linkedin-icon-bright-blue-p-800.png 800w, images/linkedin-icon-bright-blue.png 950w" alt="LinkedIn Icon" class="image-3">
           <div class="div-block-2-contact">
             <p class="link-block-text-contact">Connect with me on LinkedIn</p>
           </div>
