--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Feb 29 2024 22:05:50 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Feb 29 2024 22:15:37 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -65,7 +65,7 @@
               <div class="icon-card-content">
                 <p class="about-label">Create<br></p>
                 <p class="icon-title">Design &amp; Prototyping</p>
-                <p class="icon-description">Adobe XD, Illustrator, Photoshop, InDesign, InVision, Framer and more</p>
+                <p class="icon-description">Adobe XD, Illustrator, Photoshop, InDesign, Figma, Framer and more</p>
               </div>
             </div>
           </div>
@@ -74,7 +74,7 @@
               <div class="icon-card-content">
                 <p class="about-label">Deliver<br></p>
                 <p class="icon-title">Development &amp; Delivery</p>
-                <p class="icon-description">HTML/CSS/JS, WordPress, Webflow, SharePoint and more</p>
+                <p class="icon-description">HTML/CSS/JS, WordPress, Webflow, SharePoint, Other CMS Platforms and more</p>
               </div>
             </div>
           </div>
@@ -222,7 +222,7 @@
             <h4 class="work-heading">Logo, UI Design &amp; Development</h4>
             <p class="paragraph-2">Approved to Print</p>
           </div>
-          <div class="div-block-6"><img src="images/resize-dark.png" loading="lazy" srcset="images/resize-dark-p-500.png 500w, images/resize-dark.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 991px) 4vw, 33px" alt=""></div>
+          <div class="div-block-6"><img src="images/resize-dark.png" loading="lazy" srcset="images/resize-dark-p-500.png 500w, images/resize-dark.png 512w" sizes="100vw" alt=""></div>
         </div>
       </a>
       <a href="work/jason-carlson-ascension-website-design.html" class="work-link-block w-inline-block">
@@ -383,7 +383,7 @@
   <div id="Footer" class="footer">
     <div class="footer-div">
       <p class="copyright">© Copyright 2024 Vanessa Salinas - All Rights Reserved</p>
-      <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="images/up-arrow-white.png" loading="lazy" sizes="40px" srcset="images/up-arrow-white-p-500.png 500w, images/up-arrow-white.png 512w" alt=""></a>
+      <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="images/up-arrow-white.png" loading="lazy" sizes="100vw" srcset="images/up-arrow-white-p-500.png 500w, images/up-arrow-white.png 512w" alt=""></a>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=606def14871f33b3fe720655" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
