--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Feb 29 2024 22:15:37 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Mar 04 2024 17:34:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -43,11 +43,13 @@
   </div>
   <div id="aboutv" class="intro-section">
     <div class="intro-div">
-      <p class="hero-text">Understand. Create. Deliver.<br></p>
-      <p class="hero-text-v2">Design Solutions.</p>
+      <div class="hero-title-block">
+        <p class="hero-text">Understand. Create. Deliver.<br></p>
+        <p class="hero-text-v2">Design Solutions.</p>
+      </div>
       <div class="about-div">
-        <p class="subtitle">UX/UI Designer with a focus in visual design &amp; front end development</p>
-        <p class="intro-paragraph">Over 15 years of combined experience in graphic design, web design and front end development. Goal is to improve UI/UX through various methods e.g. research, collaboration, problem solving, wire framing, prototyping and more. Great interest in accepting feedback and using it to build better experiences for users.</p>
+        <p class="subtitle">UX/UI Design &amp; Front End Development</p>
+        <p class="intro-paragraph">20 years of combined experience in graphic design, web design and front end development. Improve UI/UX through various methods such as research, collaboration, problem solving, wire framing, prototyping and more. Interest in accepting feedback and using it to build better experiences for users.</p>
       </div>
       <div class="icon-div">
         <div class="w-layout-grid grid">
