--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed Aug 07 2024 22:32:22 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed Aug 07 2024 22:40:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -370,7 +370,7 @@
   <div id="contactv" class="intro-section contact-section">
     <div class="intro-div">
       <div class="about-div">
-        <h3 class="hero-text contact-title">Get in Touch</h3>
+        <h3 class="hero-text-v2">Get in Touch</h3>
         <p class="paragraph-contact">Always learning and practicing web accessibility standards in design and front-end development. Staying up-to-date on trends and techniques in web and design.<br></p>
         <a href="http://www.linkedin.com/in/vanessasalinas" target="_blank" class="link-block-contact w-inline-block"><img src="images/linkedin-icon-bright-blue.png" loading="lazy" sizes="(max-width: 479px) 34px, (max-width: 767px) 40px, 48px" srcset="images/linkedin-icon-bright-blue-p-500.png 500w, images/linkedin-icon-bright-blue-p-800.png 800w, images/linkedin-icon-bright-blue.png 950w" alt="LinkedIn Icon" class="image-3">
           <div class="div-block-2-contact">
