--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed Aug 07 2024 22:40:31 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed Aug 07 2024 23:13:59 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -45,7 +45,7 @@
     <p class="hero-text-v2">Design Solutions.</p>
     <div class="about-div">
       <p class="subtitle">UX/UI Design &amp; Front End Development</p>
-      <p class="intro-paragraph">20 years of combined experience in graphic design, web design and front end development. Improve UI/UX through various methods such as research, collaboration, problem solving, wire framing, prototyping and more. Interest in accepting feedback and using it to build better experiences for users.</p>
+      <p class="intro-paragraph">20 years of combined experience in graphic design, web design and front end development. Improve UI/UX through various methods such as research, collaboration, problem solving, wire framing, prototyping and more. Interest in accepting feedback and using it to build better experiences and products.</p>
     </div>
   </div>
   <div id="aboutv" class="intro-section">
@@ -101,6 +101,26 @@
           <div class="div-block-5">
             <h4 class="work-heading">Mood Boards</h4>
             <p class="paragraph-2">Concepts for Dallas.gov</p>
+          </div>
+          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
+        </div>
+      </a>
+      <a id="w-node-ab74a316-4e3b-2112-137b-38239a7ce6f6-0a720657" href="work/dallas-city-hall-homepage-refresh-concepts.html" class="work-link-block w-inline-block">
+        <div class="work1 dch-refresh-home-2024"></div>
+        <div class="div-block-7">
+          <div class="div-block-5">
+            <h4 class="work-heading">Dallas City Hall</h4>
+            <p class="paragraph-2">Concepts for City of Dallas Homepage Refresh</p>
+          </div>
+          <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
+        </div>
+      </a>
+      <a id="w-node-deb52626-ab80-e87c-af3d-c783040247c8-0a720657" href="work/city-of-dallas-newsroom-concepts.html" class="work-link-block worklinkblock2col w-inline-block">
+        <div class="work1 dch-newsroom-2024"></div>
+        <div class="div-block-7">
+          <div class="div-block-5">
+            <h4 class="work-heading">Dallas City News</h4>
+            <p class="paragraph-2">Concepts for City of Dallas Newsroom (The Hub)</p>
           </div>
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
