--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed Aug 07 2024 23:13:59 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Aug 08 2024 01:30:08 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -48,35 +48,33 @@
       <p class="intro-paragraph">20 years of combined experience in graphic design, web design and front end development. Improve UI/UX through various methods such as research, collaboration, problem solving, wire framing, prototyping and more. Interest in accepting feedback and using it to build better experiences and products.</p>
     </div>
   </div>
-  <div id="aboutv" class="intro-section">
-    <div class="intro-div">
-      <div class="icon-div">
-        <div class="w-layout-grid grid">
-          <div id="w-node-_7331fe8b-6002-ea69-4a57-dd1d744880e1-0a720657" class="icon-card">
-            <div class="icon-card-content-parent">
-              <div class="icon-card-content">
-                <p class="about-label">Understand<br></p>
-                <p class="icon-title">Research &amp; Discovery</p>
-                <p class="icon-description">Competitive Analysis, Content Inventory, Project Requirements and more</p>
-              </div>
+  <div class="intro-div">
+    <div class="icon-div">
+      <div class="w-layout-grid grid">
+        <div id="w-node-_7331fe8b-6002-ea69-4a57-dd1d744880e1-0a720657" class="icon-card">
+          <div class="icon-card-content-parent">
+            <div class="icon-card-content">
+              <p class="about-label">Understand<br></p>
+              <p class="icon-title">Research &amp; Discovery</p>
+              <p class="icon-description">Competitive Analysis, Content Inventory, Project Requirements and more</p>
             </div>
           </div>
-          <div id="w-node-d1906c74-a7e0-552d-1b95-75c2e573ba0b-0a720657" class="icon-card">
-            <div class="icon-card-content-parent">
-              <div class="icon-card-content">
-                <p class="about-label">Create<br></p>
-                <p class="icon-title">Design &amp; Prototyping</p>
-                <p class="icon-description">Adobe XD, Illustrator, Photoshop, InDesign, Figma, Framer and more</p>
-              </div>
+        </div>
+        <div id="w-node-d1906c74-a7e0-552d-1b95-75c2e573ba0b-0a720657" class="icon-card">
+          <div class="icon-card-content-parent">
+            <div class="icon-card-content">
+              <p class="about-label">Create<br></p>
+              <p class="icon-title">Design &amp; Prototyping</p>
+              <p class="icon-description">Adobe XD, Illustrator, Photoshop, InDesign, Figma, Framer and more</p>
             </div>
           </div>
-          <div id="w-node-_6ebfa1ea-b3e4-df76-0df8-2c2ca6080ae8-0a720657" class="icon-card">
-            <div class="icon-card-content-parent">
-              <div class="icon-card-content">
-                <p class="about-label">Deliver<br></p>
-                <p class="icon-title">Development &amp; Delivery</p>
-                <p class="icon-description">HTML/CSS/JS, WordPress, Webflow, SharePoint, Other CMS Platforms and more</p>
-              </div>
+        </div>
+        <div id="w-node-_6ebfa1ea-b3e4-df76-0df8-2c2ca6080ae8-0a720657" class="icon-card">
+          <div class="icon-card-content-parent">
+            <div class="icon-card-content">
+              <p class="about-label">Deliver<br></p>
+              <p class="icon-title">Development &amp; Delivery</p>
+              <p class="icon-description">HTML/CSS/JS, WordPress, Webflow, SharePoint, Other CMS Platforms and more</p>
             </div>
           </div>
         </div>
@@ -391,7 +389,7 @@
     <div class="intro-div">
       <div class="about-div">
         <h3 class="hero-text-v2">Get in Touch</h3>
-        <p class="paragraph-contact">Always learning and practicing web accessibility standards in design and front-end development. Staying up-to-date on trends and techniques in web and design.<br></p>
+        <p class="paragraph-contact">Continuous learning and practicing web accessibility standards in design and front-end development. Staying up-to-date on trends and techniques in web and design.<br></p>
         <a href="http://www.linkedin.com/in/vanessasalinas" target="_blank" class="link-block-contact w-inline-block"><img src="images/linkedin-icon-bright-blue.png" loading="lazy" sizes="(max-width: 479px) 34px, (max-width: 767px) 40px, 48px" srcset="images/linkedin-icon-bright-blue-p-500.png 500w, images/linkedin-icon-bright-blue-p-800.png 800w, images/linkedin-icon-bright-blue.png 950w" alt="LinkedIn Icon" class="image-3">
           <div class="div-block-2-contact">
             <p class="link-block-text-contact">Connect with me on LinkedIn</p>
