--- a/work/dallas-city-hall-homepage-refresh-concepts.html
+++ b/work/dallas-city-hall-homepage-refresh-concepts.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed Aug 07 2024 23:13:59 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Aug 08 2024 01:30:08 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66b3fc1be5f7e6b347284bbb" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -39,7 +39,7 @@
       <div class="project-header">
         <h6>City of Dallas</h6>
         <h4>Homepage Refresh Concepts</h4>
-        <p>The first redesigned homepage of Dallas City Hall was launched in 2015 about a month before I joined the team. My job was to help build and maintain the established brand by working with various departments to bring their websites up-to-date with the new style and standards. Since then we wanted to refreshed the homepage to better represent all of the continued work done since with the brand over time.<br><br><strong>Role:</strong> UI Designer<br><strong>Programs:</strong> Adobe XD<br><strong>Year:</strong> 2024<br></p>
+        <p>The first redesigned homepage of Dallas City Hall was launched in 2015 about a month before I joined the team. My job was to help build and maintain the established brand by working with various departments to bring their websites up-to-date with the new style and standards. Since then we wanted to refresh the homepage to better represent all of the continued work done since with the brand over time.<br><br><strong>Role:</strong> UI Designer<br><strong>Programs:</strong> Adobe XD<br><strong>Year:</strong> 2024<br></p>
       </div>
       <div class="resources-div">
         <div style="padding-top:56.17021276595745%" class="w-video w-embed"><iframe class="embedly-embed" src="https://cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2FnWNg6b-gPXQ&display_name=YouTube&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DnWNg6b-gPXQ&image=http%3A%2F%2Fi.ytimg.com%2Fvi%2FnWNg6b-gPXQ%2Fhqdefault.jpg&key=96f1f04c5f4143bcb0f2e68c87d65feb&type=text%2Fhtml&schema=youtube" width="940" height="528" scrolling="no" allowfullscreen="" title="DCH Homepage Refresh Concepts 2024"></iframe></div>
