--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Aug 08 2024 12:50:04 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Aug 08 2024 14:43:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -25,13 +25,13 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
-  <div data-collapse="medium" data-animation="default" data-duration="400" id="topnav" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
+  <div data-collapse="small" data-animation="default" data-duration="400" id="topnav" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="div-block-3">
       <a href="index.html" aria-current="page" class="brand w-nav-brand w--current">
         <h5 class="logo-heading">Vanessa Salinas</h5>
       </a>
       <nav role="navigation" class="nav-menu w-nav-menu">
-        <a href="index.html" aria-current="page" class="nav-link w-nav-link w--current">Home</a>
+        <a href="https://vanessasalinas.com" class="nav-link w-nav-link">Home</a>
         <a href="http://vanessasalinas.com/index.html#vwork" class="nav-link w-nav-link">Work</a>
         <a href="http://vanessasalinas.com/index.html#contactv" class="nav-link w-nav-link">Contact</a>
       </nav>
@@ -40,15 +40,11 @@
       </div>
     </div>
   </div>
-  <div class="hero-title-block">
-    <p class="hero-text">Understand. Create. Deliver.<br></p>
-    <p class="hero-text-v2">Design Solutions.</p>
+  <div class="intro-div">
     <div class="about-div">
-      <p class="subtitle">UX/UI Design &amp; Front End Development</p>
+      <p class="hero-text-v2">UX/UI Design &amp; Development</p>
       <p class="intro-paragraph">20 years of combined experience in graphic design, web design and front end development. Improve UI/UX through various methods such as research, collaboration, problem solving, wire framing, prototyping and more. Interest in accepting feedback and using it to build better experiences and products.</p>
     </div>
-  </div>
-  <div class="intro-div">
     <div class="icon-div">
       <div class="w-layout-grid grid">
         <div id="w-node-_7331fe8b-6002-ea69-4a57-dd1d744880e1-0a720657" class="icon-card">
