--- a/work/dallas-city-hall-homepage-refresh-concepts.html
+++ b/work/dallas-city-hall-homepage-refresh-concepts.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Aug 08 2024 01:30:08 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Aug 08 2024 14:43:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66b3fc1be5f7e6b347284bbb" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -19,13 +19,13 @@
   <link href="../images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
-  <div data-collapse="medium" data-animation="default" data-duration="400" id="topnav" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
+  <div data-collapse="small" data-animation="default" data-duration="400" id="topnav" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="div-block-3">
       <a href="../index.html" class="brand w-nav-brand">
         <h5 class="logo-heading">Vanessa Salinas</h5>
       </a>
       <nav role="navigation" class="nav-menu w-nav-menu">
-        <a href="../index.html" class="nav-link w-nav-link">Home</a>
+        <a href="https://vanessasalinas.com" class="nav-link w-nav-link">Home</a>
         <a href="http://vanessasalinas.com/index.html#vwork" class="nav-link w-nav-link">Work</a>
         <a href="http://vanessasalinas.com/index.html#contactv" class="nav-link w-nav-link">Contact</a>
       </nav>
