--- a/work/jason-carlson-ascension-website-design.html
+++ b/work/jason-carlson-ascension-website-design.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon Mar 04 2024 17:34:13 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Aug 08 2024 14:43:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6318eae54b980d6f2be1ca64" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -20,13 +19,13 @@
   <link href="../images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
-  <div data-collapse="medium" data-animation="default" data-duration="400" id="topnav" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
+  <div data-collapse="small" data-animation="default" data-duration="400" id="topnav" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="div-block-3">
       <a href="../index.html" class="brand w-nav-brand">
         <h5 class="logo-heading">Vanessa Salinas</h5>
       </a>
       <nav role="navigation" class="nav-menu w-nav-menu">
-        <a href="../index.html" class="nav-link w-nav-link">Home</a>
+        <a href="https://vanessasalinas.com" class="nav-link w-nav-link">Home</a>
         <a href="http://vanessasalinas.com/index.html#vwork" class="nav-link w-nav-link">Work</a>
         <a href="http://vanessasalinas.com/index.html#contactv" class="nav-link w-nav-link">Contact</a>
       </nav>
@@ -56,7 +55,7 @@
   <div id="Footer" class="footer">
     <div class="footer-div">
       <p class="copyright">© Copyright 2024 Vanessa Salinas - All Rights Reserved</p>
-      <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="../images/up-arrow-white.png" loading="lazy" sizes="100vw" srcset="../images/up-arrow-white-p-500.png 500w, ../images/up-arrow-white.png 512w" alt=""></a>
+      <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="../images/up-arrow-white.png" loading="lazy" sizes="40px" srcset="../images/up-arrow-white-p-500.png 500w, ../images/up-arrow-white.png 512w" alt=""></a>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=606def14871f33b3fe720655" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
