--- a/work/city-of-dallas-newsroom-concepts.html
+++ b/work/city-of-dallas-newsroom-concepts.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Aug 08 2024 14:50:46 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Aug 09 2024 03:21:56 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66b3fe45d623cd288f62ed21" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -39,7 +39,7 @@
       <div class="project-header">
         <h6>City of Dallas</h6>
         <h4>Newsroom (The Hub) Concepts</h4>
-        <p>The current City of Dallas newsroom was built by a third party vendor prior to my arrival on the team. The department would like to move into our home site under IT&#x27;s maintenance and web standards. There have been a few mockups variations created during this process. This is only one example of the concepts presented.<br><br><strong>Role:</strong> UI Designer<br><strong>Programs:</strong> Adobe XD<br><strong>Year:</strong> 2024<br></p>
+        <p>The current City of Dallas newsroom was built by a third party prior to my arrival on the team. The department would now like to move into our home site under IT&#x27;s maintenance and web standards. There have been a few mockups and variations created and presented during this process.<br><br><strong>Role:</strong> UI Designer<br><strong>Programs:</strong> Adobe XD<br><strong>Year:</strong> 2024<br></p>
       </div>
       <div class="resources-div">
         <div style="padding-top:56.17021276595745%" class="w-video w-embed"><iframe class="embedly-embed" src="https://cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2FKWTsBMDI2PQ%3Ffeature%3Doembed&display_name=YouTube&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DKWTsBMDI2PQ&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2FKWTsBMDI2PQ%2Fhqdefault.jpg&key=96f1f04c5f4143bcb0f2e68c87d65feb&type=text%2Fhtml&schema=youtube" width="940" height="528" scrolling="no" allowfullscreen="" title="City of Dallas Newsroom Concepts 2024"></iframe></div>
