--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Aug 09 2024 03:21:56 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Aug 09 2024 03:45:45 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -269,12 +269,12 @@
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
       </a>
-      <a href="work/alpha-omega-social-media-logo-design.html" class="work-link-block worklinkblock2col w-inline-block">
-        <div class="work1 work-alpha-omega-logo"></div>
+      <a href="work/bubbly-cloth-logo-design.html" class="work-link-block worklinkblock2col w-inline-block">
+        <div class="work1 bubbly-cloth-logo"></div>
         <div class="div-block-7">
           <div class="div-block-5">
             <h4 class="work-heading">Logo Design</h4>
-            <p class="paragraph-2">Alpha Omega Social Media</p>
+            <p class="paragraph-2">The Bubbly Cloth</p>
           </div>
           <div class="div-block-6"><img src="images/right-arrow-dark.png" loading="lazy" alt=""></div>
         </div>
